--- a/waybar/style.css
+++ b/waybar/style.css
@@ -27,11 +27,11 @@ tooltip label {
 #custom-menu {
   color:@primary;
   font-size: 20px;
-  border-radius: 8px;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-right: 0px;
   padding-left: 0px;
+	/* padding-left: 5px; */
 }
 
 #cpu {
