--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1,29 +1,29 @@
-@define-color accent_color #ffb4a7;
-@define-color accent_bg_color #73342a;
-@define-color accent_fg_color #ffdad4;
+@define-color accent_color #c1c1ff;
+@define-color accent_bg_color #414178;
+@define-color accent_fg_color #e2dfff;
 @define-color destructive_color #ffb4ab;
 @define-color destructive_bg_color #93000a;
 @define-color destructive_fg_color #ffdad6;
-@define-color success_color #e7bdb6;
-@define-color success_bg_color #5d3f3a;
-@define-color success_fg_color #ffdad4;
-@define-color warning_color #dec48c;
-@define-color warning_bg_color #564419;
-@define-color warning_fg_color #fbe0a6;
+@define-color success_color #c6c4dd;
+@define-color success_bg_color #454559;
+@define-color success_fg_color #e2e0f9;
+@define-color warning_color #e9b9d2;
+@define-color warning_bg_color #5f3c51;
+@define-color warning_fg_color #ffd8eb;
 @define-color error_color #ffb4ab;
 @define-color error_bg_color #93000a;
 @define-color error_fg_color #ffdad6;
-@define-color window_bg_color #1a1110;
-@define-color window_fg_color #f1dfdb;
-@define-color view_bg_color #1a1110;
-@define-color view_fg_color #f1dfdb;
+@define-color window_bg_color #131318;
+@define-color window_fg_color #e4e1e9;
+@define-color view_bg_color #131318;
+@define-color view_fg_color #e4e1e9;
 @define-color headerbar_bg_color @window_bg_color;
 @define-color headerbar_fg_color @window_fg_color;
 @define-color headerbar_border_color @window_bg_color;
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color @window_bg_color;
-@define-color card_bg_color #322826;
-@define-color card_fg_color #f1dfdb;
+@define-color card_bg_color #2a292f;
+@define-color card_fg_color #e4e1e9;
 @define-color card_shade_color rgba(0, 0, 0, 0.07);
 @define-color dialog_bg_color @card_bg_color;
 @define-color dialog_fg_color @card_fg_color;
@@ -31,7 +31,7 @@
 @define-color popover_fg_color @card_fg_color;
 @define-color shade_color rgba(0, 0, 0, 0.36);
 @define-color scrollbar_outline_color rgba(139, 145, 152, 0.5);
-@define-color sidebar_bg_color #231918;
+@define-color sidebar_bg_color #1b1b21;
 @define-color secondary_sidebar_bg_color @sidebar_bg_color;
 @define-color sidebar_backdrop_color @sidebar_bg_color;
 @define-color secondary_sidebar_backdrop_color @sidebar_bg_color;
